# SLAG

./: .gitignore  README.md  chapter_1_narrative.md  chapter_1_output.md  chapter_1_test_output.md  guide.md  package-lock.json  package.json  slag-generation-guide.txt  story_generation_schematic.md  tailwind.config.js  vercel.json
backend/: .env.example  .env.template  3_chapter_test_output.md  requirements.txt  run.py  setup.py  start_server.py
frontend/: .env.development  .env.production  .gitignore  next.config.ts  package.json  tsconfig.json  (+1 more)
story-engine-mini/: .env.template  .gitignore  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements.txt
story-engine-mini/docker/: Dockerfile  docker-compose.yml
story-engine-mini/scripts/: test.sh
story-engine-mini/src/: main.py
story-engine-mini/src/api/routes/: story.py
story-engine-mini/src/config/: __init__.py  config.py
story-engine-mini/src/core/clients/: bedrock.py  pinecone_client.py
story-engine-mini/src/core/models/: phase_constants.py  story_models.py  story_outline.py
story-engine-mini/src/core/prompts/: templates.py
story-engine-mini/src/core/services/: bedrock_service.py  pinecone_service.py  story_service.py
story-engine-mini/src/core/story_generation/: generator.py
story-engine-mini/src/core/utils/: logging.py  logging_config.py  namespace.py  response_parser.py
story-engine-mini/tests/: test_bedrock.py  test_bedrock_service.py  test_config.py  test_namespace.py  test_pinecone.py  test_pinecone_service.py  test_story_service.py
story-engine-mini/tests/utils/: test_utils.py
(+254 files in other folders)
